# swagger_output.json
@@ -19,6 +19,22 @@
     }
   },
   "paths": {
+    "/major": {
+      "post": {
+        "tags": [
+          "Majors"
+        ],
+        "description": "Hello",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/role/{roleId}": {
       "post": {
         "tags": [
